# lattice

./: CMakeLists.txt  main.cpp
cmake/: readme.md
